test/Driver/vfs.code
// https://github.com/apple/language/issues/55280

// Verifies that the driver passes the -vfsoverlay flag to the frontend.
// RUN: %languagec_driver -driver-print-jobs -c -vfsoverlay overlay.yaml %s | %FileCheck --check-prefix=CHECK-ONE %s

// CHECK-ONE: bin{{/|\\\\}}language{{(c|c-legacy-driver|-frontend)?(\.exe)?"?}} -frontend{{.*}}-c{{.*}}-vfsoverlay overlay.yaml

// Verifies that multiple occurrences are passed in order.
// RUN: %languagec_driver -driver-print-jobs -c -vfsoverlay overlay1.yaml -vfsoverlay overlay2.yaml -vfsoverlay overlay3.yaml %s | %FileCheck --check-prefix=CHECK-MULTIPLE %s

// CHECK-MULTIPLE: bin{{/|\\\\}}language{{(c|c-legacy-driver|-frontend)?(\.exe)?"?}} -frontend{{.*}}-c{{.*}}-vfsoverlay overlay1.yaml -vfsoverlay overlay2.yaml -vfsoverlay overlay3.yaml

// Verifies that input paths are not rejected prematurely when -vfsoverlay is present as they may exist on the vfs (which the frontend accounts for) even if they don't exist on the real file system.
// RUN: not %languagec_driver -driver-print-jobs -c %t/file-not-on-the-real-filesystem.code
// RUN: %languagec_driver -driver-print-jobs -c -vfsoverlay overlay1.yaml %t/file-not-on-the-real-filesystem.code

// RUN: mkdir -p %t
// RUN: cd %t
// RUN: echo "foobar" > main.code
// RUN: not %languagec_driver main.code 2>&1 | %FileCheck --check-prefix=CHECK-ERROR %s
// RUN: echo '{"roots": [],"version": 0}' > %t.yaml
// RUN: not %languagec_driver -vfsoverlay %t.yaml main.code 2>&1 | %FileCheck --check-prefix=CHECK-ERROR %s
// RUN: echo '{"version": 0,"roots":[{"type":"directory","name":"%/t","contents":[{"type":"file","name":"vfsname.code", "external-contents":"main.code"}]}]}' > %t.yaml
// RUN: not %languagec_driver -vfsoverlay %t.yaml vfsname.code -v 2>&1 | %FileCheck --check-prefix=CHECK-ERROR %s
// CHECK-ERROR: {{^}}main.code:1:1: error:
